<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.czarek.europequiz.AboutActivity">

    <TextView
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/about_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/subtitle_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/graphic_resources_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/map_of_europe_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_of_europe_link" />

            <TextView
                style="@style/plain_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_plain_txt" />

            <TextView
                android:id="@+id/wikimedia_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wikimedia_link" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/flags_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flags_link" />

            <TextView
                style="@style/plain_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by_plain_txt" />

            <TextView
                android:id="@+id/freepik_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freepik_link" />

            <TextView
                style="@style/plain_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_plain_txt" />

            <TextView
                android:id="@+id/flaticon_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flaticon_link" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/info_button_link"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_button_link" />

            <TextView
                style="@style/plain_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by_plain_txt" />

            <TextView
                android:id="@+id/freepik_link_2"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freepik_link" />

            <TextView
                style="@style/plain_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_plain_txt" />

            <TextView
                android:id="@+id/flaticon_link_2"
                style="@style/link_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flaticon_link" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
