<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d826d"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.czarek.europequiz.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/europe_quiz_logo"/>

    <TextView
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/europe_quiz_title" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/play_btn" />

    <Button
        android:id="@+id/view_map_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view_map_btn" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/about_btn" />

</LinearLayout>
