<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#46B29D"
    tools:context="com.czarek.europequiz.InteractiveMapActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/europe_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/europe_map" />

            <ImageView
                android:id="@+id/country_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/europe_map" />

            <ImageView
                android:id="@+id/europe_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:alpha="0"
                android:src="@drawable/europe_mask" />

        </FrameLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/find_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            style="@style/find_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_string" />

        <TextView
            android:id="@+id/country_to_find"
            style="@style/find_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_bar"
        android:background="@android:color/holo_green_dark"
        android:gravity="center">

        <TextView
            style="@style/left_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_txt" />

        <TextView
            android:id="@+id/left_countries"
            style="@style/left_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/confirm_button"
        android:backgroundTint="@android:color/holo_green_dark"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/confirm_btn"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/answer_box"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@android:color/holo_red_light"
        android:padding="24dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/flag"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/info_flag_description"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_capital"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country_capital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_population"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_area"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_km2" />

            </LinearLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/holo_red_dark"
                android:backgroundTint="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/next_btn"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/finish_box"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="center"
        android:padding="24dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/final_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/finish_msg_map_game"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/go_to_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/final_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/go_to_menu_btn"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>
